add testing for handlers
