# handlers/list.go
@@ -5,7 +5,10 @@ import (
 	dto "backend-technical-test/dto/result"
 	"backend-technical-test/models"
 	"backend-technical-test/repository"
+	"backend-technical-test/util"
+	"fmt"
 	"net/http"
+	"os"
 	"strconv"
 	"time"
 
@@ -84,6 +87,7 @@ func (h *ListHandler) FindLists(c echo.Context) error {
 // @Failure		500	{object}	dto.ErrorResult
 func (h *ListHandler) FindListById(c echo.Context) error {
 	id, _ := strconv.Atoi(c.Param("id"))
+	fmt.Println(id)
 	list, err := h.ListRepository.FindListById(id)
 	if err != nil {
 		return c.JSON(http.StatusBadRequest,
@@ -107,40 +111,53 @@ func (h *ListHandler) FindListById(c echo.Context) error {
 func (h *ListHandler) CreateList(c echo.Context) error {
 	request := new(listsdto.ListRequest)
 	if err := c.Bind(request); err != nil {
-		return c.JSON(http.StatusBadRequest,
-			dto.ErrorResult{
-				Code: http.StatusBadRequest,
-				Message: err.Error(),
-			})
+		return c.JSON(http.StatusBadRequest, dto.ErrorResult{
+			Code:    http.StatusBadRequest,
+			Message: err.Error(),
+		})
 	}
 
 	validation := validator.New()
 	err := validation.Struct(request)
 	if err != nil {
-		return c.JSON(http.StatusBadRequest,
-			dto.ErrorResult{
-				Code: http.StatusBadRequest,
-				Message: err.Error(),
-			})
+		return c.JSON(http.StatusBadRequest, dto.ErrorResult{
+			Code:    http.StatusBadRequest,
+			Message: err.Error(),
+		})
 	}
 
 	list := models.List{
-		Title: request.Title,
+		Title:       request.Title,
 		Description: request.Description,
-		CreatedAt: time.Now(),
-		UpdatedAt: time.Now(),
+		CreatedAt:   time.Now(),
+		UpdatedAt:   time.Now(),
 	}
 
-	data, err := h.ListRepository.CreateList(list)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError,
-			dto.ErrorResult{
-				Code: http.StatusInternalServerError,
+	file, err := c.FormFile("file")
+	if err == nil {
+		filePath, err := util.SaveFile(file)
+		if err != nil {
+			return c.JSON(http.StatusInternalServerError, dto.ErrorResult{
+				Code:    http.StatusInternalServerError,
 				Message: err.Error(),
 			})
+		}
+		list.File = filePath
 	}
 
-	return c.JSON(http.StatusOK, dto.SuccessResult{Code: http.StatusOK, Message: "List has been created", Data: data})
+	createdList, err := h.ListRepository.CreateList(list)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, dto.ErrorResult{
+			Code:    http.StatusInternalServerError,
+			Message: err.Error(),
+		})
+	}
+
+	return c.JSON(http.StatusOK, dto.SuccessResult{
+		Code:    http.StatusOK,
+		Message: "List has been created",
+		Data:    createdList,
+	})
 }
 
 // @Tags 		Lists
@@ -155,21 +172,19 @@ func (h *ListHandler) CreateList(c echo.Context) error {
 func (h *ListHandler) UpdateList(c echo.Context) error {
 	request := new(listsdto.ListRequest)
 	if err := c.Bind(request); err != nil {
-		return c.JSON(http.StatusBadRequest,
-			dto.ErrorResult{
-				Code: http.StatusBadRequest,
-				Message: err.Error(),
-			})
+		return c.JSON(http.StatusBadRequest, dto.ErrorResult{
+			Code:    http.StatusBadRequest,
+			Message: err.Error(),
+		})
 	}
 
 	listId, _ := strconv.Atoi(c.Param("id"))
 	list, err := h.ListRepository.FindListById(listId)
 	if err != nil {
-		return c.JSON(http.StatusBadRequest,
-			dto.ErrorResult{
-				Code: http.StatusBadRequest,
-				Message: err.Error(),
-			})
+		return c.JSON(http.StatusBadRequest, dto.ErrorResult{
+			Code:    http.StatusBadRequest,
+			Message: err.Error(),
+		})
 	}
 
 	if request.Title != "" {
@@ -182,17 +197,42 @@ func (h *ListHandler) UpdateList(c echo.Context) error {
 
 	list.UpdatedAt = time.Now()
 
-	data, err := h.ListRepository.UpdateList(list, listId)
-	if err != nil {
-		return c.JSON(http.StatusInternalServerError,
-			dto.ErrorResult{
-				Code: http.StatusInternalServerError,
+	file, err := c.FormFile("file")
+	if err == nil {
+		filePath, err := util.SaveFile(file)
+		if err != nil {
+			return c.JSON(http.StatusInternalServerError, dto.ErrorResult{
+				Code:    http.StatusInternalServerError,
 				Message: err.Error(),
 			})
+		}
+		if list.File != "" {
+			if err := os.Remove(list.File); err != nil {
+				return c.JSON(http.StatusInternalServerError, dto.ErrorResult{
+					Code:    http.StatusInternalServerError,
+					Message: "Failed to delete old file",
+				})
+			}
+		}
+		list.File = filePath
 	}
 
-	return c.JSON(http.StatusOK, dto.SuccessResult{Code: http.StatusOK, Message: "List has been updated", Data: data})
+	updatedList, err := h.ListRepository.UpdateList(list, listId)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, dto.ErrorResult{
+			Code:    http.StatusInternalServerError,
+			Message: err.Error(),
+		})
+	}
+
+	// Respon dengan hasil pembaruan
+	return c.JSON(http.StatusOK, dto.SuccessResult{
+		Code:    http.StatusOK,
+		Message: "List has been updated",
+		Data:    updatedList,
+	})
 }
+
 
 // @Tags 		Lists
 // @Summary		Delete list
